# gemini-cli-tool

./: .deepsource.toml  CHANGELOG.md  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: publish.yml  simple-release.yml  tests.yml
gemini_cli_tool/: __init__.py  cli.py
tests/: __init__.py  test_cli.py
