[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-cli-tool"
version = "0.1.0"
description = "Advanced AI-powered CLI tool for code analysis using Gemini"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "OnTheFox", email = "dev@github.com"}]
keywords = ["gemini", "ai", "cli", "code-analysis", "code-generation"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "google-generativeai>=0.4.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black>=23.0", "ruff>=0.1.0"]

[project.urls]
Homepage = "https://github.com/onthefox/gemini-cli-tool"
Repository = "https://github.com/onthefox/gemini-cli-tool.git"
Issues = "https://github.com/onthefox/gemini-cli-tool/issues"

[project.scripts]
gemini-cli-tool = "gemini_cli_tool.cli:main"

[tool.setuptools]
packages = ["gemini_cli_tool"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py38"
